--- a/.gitignore
+++ b/.gitignore
@@ -256,45 +256,28 @@ terraform.rc
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
+./frontend/# dependencies
+./frontend/./frontend/node_modules
+./frontend/.pnp
+./frontend/.pnp.*
+./frontend/.yarn/*
+./frontend/!.yarn/patches
+./frontend/!.yarn/plugins
+./frontend/!.yarn/releases
+./frontend/!.yarn/versions
+./frontend/coverage
+./frontend/.next/
+./frontend/out/
+./frontend/build
+./frontend/.DS_Store
+./frontend/*.pem
+./frontend/npm-debug.log*
+./frontend/yarn-debug.log*
+./frontend/yarn-error.log*
+./frontend/.pnpm-debug.log*
+./frontend/.env*
+./frontend/.vercel
+./frontend/*.tsbuildinfo
+./frontend/next-env.d.ts
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,venv,visualstudiocode
 
