--- a/.gitignore
+++ b/.gitignore
@@ -256,28 +256,30 @@ terraform.rc
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-./frontend/# dependencies
-./frontend/./frontend/node_modules
-./frontend/.pnp
-./frontend/.pnp.*
-./frontend/.yarn/*
-./frontend/!.yarn/patches
-./frontend/!.yarn/plugins
-./frontend/!.yarn/releases
-./frontend/!.yarn/versions
-./frontend/coverage
-./frontend/.next/
-./frontend/out/
-./frontend/build
-./frontend/.DS_Store
-./frontend/*.pem
-./frontend/npm-debug.log*
-./frontend/yarn-debug.log*
-./frontend/yarn-error.log*
-./frontend/.pnpm-debug.log*
-./frontend/.env*
-./frontend/.vercel
-./frontend/*.tsbuildinfo
-./frontend/next-env.d.ts
+frontend/# dependencies
+frontend/./frontend/node_modules
+frontend/.pnp
+frontend/.pnp.*
+frontend/.yarn/*
+frontend/!.yarn/patches
+frontend/!.yarn/plugins
+frontend/!.yarn/releases
+frontend/!.yarn/versions
+frontend/coverage
+frontend/.next/
+frontend/out/
+frontend/build
+frontend/.DS_Store
+frontend/*.pem
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/.pnpm-debug.log*
+frontend/.env*
+frontend/.vercel
+frontend/*.tsbuildinfo
+frontend/next-env.d.ts
+frontend/node_modules/
+frontend/.next/
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,venv,visualstudiocode
 
